# obs-service-cargo

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  consts.rs  lib.rs  main.rs  utils.rs
src/audit/: mod.rs
src/cli/: mod.rs
src/utils/: compress.rs  decompress.rs  mod.rs
