[package]
name = "obs-service-cargo-vendor-rs"
description = "OBS Source Service to vendor all crates.io and dependencies for Rust project locally. Executable rewritten in Rust."
authors = ["Soc Virnyl Estela <socvirnyl.estela@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
flate2 = { version = "1.0.27" }
infer = "0.15.0"
tar = "0.4.40"
tempfile = "3.8.0"
terminfo = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
xz2 = "0.1.7"
zstd = { version = "0.12.4", features = ["pkg-config"] }
